--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 22
@@ -11,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,6 +22,16 @@ android {
 }
 
 dependencies {
+
+    // Main source set dependencies
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.google.dagger:dagger:2.0.1'
+
+    // Provided Dependencies
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    // APT Compile Dependencies
+    apt 'com.google.dagger:dagger-compiler:2.0.1'
+
 }
