--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.databinding'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
@@ -28,11 +29,16 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
+    compile 'com.squareup.retrofit:retrofit:1.6.0'
+
 
     // Provided Dependencies
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     // APT Compile Dependencies
     apt 'com.google.dagger:dagger-compiler:2.0.1'
+    apt 'com.android.databinding:compiler:1.0-rc0'
 
 }
