--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.f2prateek.dart:dart:1.1.0'
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.6.0'
+    compile "org.parceler:parceler-api:1.0.1"
 
 
     // Provided Dependencies
@@ -46,5 +48,6 @@ dependencies {
     // APT Compile Dependencies
     apt 'com.google.dagger:dagger-compiler:2.0.1'
     apt 'com.android.databinding:compiler:1.0-rc0'
+    apt "org.parceler:parceler:1.0.1"
 
 }
