--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activities.ArticleDetailActivity"
+            android:label="@string/app_name">
+        </activity>
+
     </application>
 
 </manifest>
