--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,29 +25,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-
     // Main source set dependencies
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.f2prateek.dart:dart:1.1.0'
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.ocpsoft:ocpsoft-pretty-time:1.0.7'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.6.0'
-    compile "org.parceler:parceler-api:1.0.1"
-
-
+    compile 'org.parceler:parceler-api:1.0.1'
     // Provided Dependencies
     provided 'org.glassfish:javax.annotation:10.0-b28'
-
     // APT Compile Dependencies
     apt 'com.google.dagger:dagger-compiler:2.0.1'
     apt 'com.android.databinding:compiler:1.0-rc0'
     apt "org.parceler:parceler:1.0.1"
-
 }
