--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,11 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.f2prateek.dart:dart:1.1.0'
-    compile 'com.google.dagger:dagger:2.0.1'
+    compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton.timber:timber:4.1.0'
     compile 'com.ocpsoft:ocpsoft-pretty-time:1.0.7'
-    compile 'org.parceler:parceler-api:1.0.1'
+    compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.6.0'
@@ -60,6 +61,6 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     // APT Compile Dependencies
-    apt 'com.google.dagger:dagger-compiler:2.0.1'
-    apt "org.parceler:parceler:1.0.1"
+    apt 'com.google.dagger:dagger-compiler:2.0.2'
+    apt "org.parceler:parceler:1.0.4"
 }
