--- a/blubberknife/build.gradle
+++ b/blubberknife/build.gradle
@@ -1,5 +1,5 @@
 /*
- * NewsHacker - settings.gradle
+ * NewsHacker - build.gradle
  * Last Modified: 1/19/16 12:35 PM
  *
  * Copyright (c) 2016 Trevor Summerfield
@@ -23,4 +23,28 @@
  * OTHER DEALINGS IN THE SOFTWARE.
  */
 
-include ':app', ':blubberknife'
+apply plugin: 'com.android.library'
+
+android {
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
+
+    defaultConfig {
+        minSdkVersion 15
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+}
