--- a/blubberknife-compiler/build.gradle
+++ b/blubberknife-compiler/build.gradle
@@ -1,6 +1,6 @@
 /*
- * NewsHacker - settings.gradle
- * Last Modified: 1/23/16 9:17 AM
+ * NewsHacker - build.gradle
+ * Last Modified: 1/23/16 10:03 AM
  *
  * Copyright (c) 2016 Trevor Summerfield
  *
@@ -23,4 +23,13 @@
  * OTHER DEALINGS IN THE SOFTWARE.
  */
 
-include ':app', ':blubberknife', ':blubberknife-compiler'
+apply plugin: 'java'
+
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.auto.service:auto-service:1.0-rc2'
+    compile 'com.squareup:javapoet:1.5.1'
+}
